added Data, converter, timeparser, testdata

--- a/test/test.html
+++ b/test/test.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="test.css"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-	<script type="text/javascript" src="test.js"></script>
 </head>
 <body>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/KIViy7L_lo8?enablejsapi=1" frameborder="0" allowfullscreen id="video"></iframe>
@@ -26,5 +26,5 @@
 	    <use xlink:href="#pause-button-shape">
 	  </svg>
 	</div>
-
+	<script type="text/javascript" src="test.js"></script>
 </body>
