changes in style

--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@ d3map html file
     <div id="mainContainer" class="container">
       <div class="dropdown">
         <button id="home" class="dropbtn">Nederland</button>
-        <button onclick="crimeFunction()" class="dropbtn">Misdrijf</button>
+        <button id="crimebtn" onclick="crimeFunction()" class="dropbtn">Misdrijf</button>
           <div id="crimeDrop" class="dropdown-content"></div>
       </div>
       <div id="mapContainer" class="container"></div>
       <div id="pieContainer" class="container"></div>
-      <div id="plotContainer" class="container"></div>    
+      <div id="plotContainer" class="container"></div>
+      <div id="NL-NL" title="Nederland"></div>   
     </div>
   	<script type="text/javascript" src="clean.js"></script>
   </body>
