--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ d3map html file
     <script src="http://d3js.org/queue.v1.min.js"></script>	
     <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
+    <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
     <script src="functions.js"></script>
   </head>
   <body>
