start of desin.md

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@ d3map html file
         <div class="modal-content">
           <div class="modal-header">
             <span class="close">&times;</span>
-            <img id="infobtnheader" src="images/white information btn.png">
+            <img align="left" id="infobtnheader" src="images/white information btn.png">            <h2><p align="center">This webpage gives information about crime in the Netherlands. With this page you can explore the quantity and relative occurance of certain crimes, either for the entier Netherlands or for each province individually.</p></h2>
           </div>
           <div class="modal-body">
-            <h2><p align="center">This webpage gives information about crime in the Netherlands. With this page you can explore the quantity and relative occurance of certain crimes, either for the entier Netherlands or for each province individually.</p></h2>
+
             <p align="left"><img class="infoimg" src="images/datamap.png" width="60" height="utf-80" align="left" hspace="5"><b>The datamap</b> provides information about the accurance of a crime per province in percentage. When you hover your mouse over a province the piechart will show the percentage of the total amount of a selected crime occured in that province. When you click on the province more specific data about crimes in that province will show in the piechart</p>
             <p align="left"><img class="infoimg" src="images/piechart.png" width="60" height="60" align="left"><b>The piechart</b> provides more specific information about the distribution of a crime per province corrected for the amount of inhabitans of each province. When you click on either a province on the map or a province in the piechart, the piechart will provide more information about the percentage of a specific crime compared with the total amount of crimes in that specific province.</p>
             <p align="left"><img class="infoimg" src="images/lineplot.png" width="60" height="40" align="left"><b>The lineplot</b> provides information about the occurance of a specific crime over the years 2010 to 2013. When you select a specific province and/or crime the data in the plot will show you the specific information of that province and or crime</p>
