--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ d3map html file
     <link rel="stylesheet" type="text/css" href="css/clean.css"/>
     <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-    <script src="scripts/functions.js"></script>
+    <script src="javascript/functions.js"></script>
   </head>
   <body>
     <div id="mainContainer" class="container">
@@ -46,6 +46,6 @@ d3map html file
       <div id="plotContainer" class="container"></div>
       <div id="NL-NL" title="Nederland"></div>   
     </div>
-  	<script type="text/javascript" src="scripts/clean.js"></script>
+  	<script type="text/javascript" src="javascript/clean.js"></script>
   </body>
 </html>
